Add featured, feedback and footer section

--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
   <title>devHome-web development course</title>
 </head>
 <body>
-  <div class="container-top">
     <header>
-      <a href="#"> devHome </a>
+      <a href="#"> <img src="images/logodevHome.jpg" alt="text devHome with an arc upward representing logo"> </a>
       <nav>
         <ul>
           <li><a href="#">Home</a></li>
@@ -41,11 +40,9 @@
         </p>
       </details>
     </section>
-  </div>
 
-  <div class="container-main">
     <section class="main">
-      <h1>Learning Methodology</h1>
+      <h1>Learning Methodology <hr></h1>
       <div class="cards">
         <article class="card one">
           <figure>
@@ -85,6 +82,83 @@
       </div>
       <p>See The Whole Curriculum</p>
     </section>
-  </div>
+
+    <section class="technologies">
+      <h1>Featured Technologies <hr></h1>
+      <div class="tech-cards">
+        <img src="images/html5-brands.svg" alt="html5 language icon" width="100">
+        <div class="tech-details">
+          <h3>HTML 5</h3>
+          <span>Hyper Text Markup language</span>
+          <hr>
+          <p>From Intermediate to Advance, Learn about the foundation of web and the language used to build structure of a webpage</p>
+        </div>
+      </div>
+      <div class="tech-cards">
+        <img src="images/css3-alt-brands.svg" alt="css3 language icon" width="100">
+        <div class="tech-details">
+          <h3>Css 3</h3>
+          <span>Cascading StyleSheet</span>
+          <hr>
+          <p>From Intermediate to Advance, Learn about the language used for the layout and style of a webpage</p>
+        </div>
+      </div>
+      <div class="tech-cards">
+        <img src="images/js-square-brands.svg" alt="javascript language icon" width="100">
+        <div class="tech-details">
+          <h3>Javascript</h3>
+          <span>Most widely used language on web</span>
+          <hr>
+          <p>Get familiar with the most widely used langauge in web, build projects and add functionality and UI to your webpage.</p>
+        </div>
+      </div>
+      <div class="tech-cards">
+        <img src="images/database-solid.svg" alt="An icon representing database" width="100">
+        <div class="tech-details">
+          <h3>DBMS</h3>
+          <span>Database management system</span>
+          <hr>
+          <p>Learn about storing, organising and accessing data in an efficient manner.</p>
+        </div>
+      </div>
+      <div class="tech-cards">
+        <img src="images/gem-regular.svg" alt="An icon representing a diamond shape" width="100">
+        <div class="tech-details">
+          <h3>Ruby & Ruby on rails</h3>
+          <span>Ruby is a general purpose programming language.</span>
+          <hr>
+          <p>Ruby is used for web-scraping, data processing, automation and more and Ruby on rails is a web development framework that works with any programming language</p>
+        </div>
+      </div>
+      <div class="tech-cards">
+        <img src="images/github-square-brands.svg" alt="An icon of octocat representing Github" width="100">
+        <div class="tech-details">
+          <h3>Git & Github</h3>
+          <span>Version control system</i></span>
+          <hr>
+          <p>Learn about git the Version control system and github which provides internet hosting and many other features by using git.</p>
+        </div>
+      </div>
+    </section>
+    <section class="feedback">
+      <h1>Success Stories <hr></h1>
+      <div class="slider">
+        <div class="slides">
+          <q>It has given me the much needed structure to learn and build portfolio worthy projects, and helped me in various ways to become a freelance developer.</q>
+          <p>~Prateek sharma</p>
+        </div>
+        <div class="slides">
+          <q>The curriculum is incredible and self-paced, devHome has been an invaluable resource on my path to become a software developer.</q>
+          <p>~Omkar singh</p>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <h1>&#169; creative commons</h1>
+      <p>2022 Creative Commons. Some Rights Reserved.<br>
+        with &#10084; by Tushar <a href="https://github.com/PinkMoon25" target="_blank"><i class="fa-brands fa-github"></i></a>
+      </p>
+    </footer>
 </body>
 </html>
