Add and modify structure for mobile screen

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       </nav>
     </header>
     <section class="introduction">
+      <button class="hamburger"><i class="fa-solid fa-bars"></i></button>
       <h1>"Welcome to devHome!"<br><span class="intro-header">A place to Learn <br>Web Development <br>at home</span></h1>
       <p class="intro-description">Thousands of curated content from various resources to provide <br>
         you with structure and project based-learning, anytime, anywhere. <br>All it's gonna take is your time.
@@ -81,11 +82,12 @@
         </article>
       </div>
       <p>See The Whole Curriculum</p>
+      <button class="join">Join devHome</button>
     </section>
 
     <section class="technologies">
       <h1>Featured Technologies <hr></h1>
-      <div class="tech-cards">
+      <div class="tech-cards html">
         <img src="images/html5-brands.svg" alt="html5 language icon" width="100">
         <div class="tech-details">
           <h3>HTML 5</h3>
@@ -94,7 +96,7 @@
           <p>From Intermediate to Advance, Learn about the foundation of web and the language used to build structure of a webpage</p>
         </div>
       </div>
-      <div class="tech-cards">
+      <div class="tech-cards css">
         <img src="images/css3-alt-brands.svg" alt="css3 language icon" width="100">
         <div class="tech-details">
           <h3>Css 3</h3>
@@ -103,7 +105,7 @@
           <p>From Intermediate to Advance, Learn about the language used for the layout and style of a webpage</p>
         </div>
       </div>
-      <div class="tech-cards">
+      <div class="tech-cards js">
         <img src="images/js-square-brands.svg" alt="javascript language icon" width="100">
         <div class="tech-details">
           <h3>Javascript</h3>
@@ -112,7 +114,7 @@
           <p>Get familiar with the most widely used langauge in web, build projects and add functionality and UI to your webpage.</p>
         </div>
       </div>
-      <div class="tech-cards">
+      <div class="tech-cards dbms">
         <img src="images/database-solid.svg" alt="An icon representing database" width="100">
         <div class="tech-details">
           <h3>DBMS</h3>
@@ -121,7 +123,7 @@
           <p>Learn about storing, organising and accessing data in an efficient manner.</p>
         </div>
       </div>
-      <div class="tech-cards">
+      <div class="tech-cards ruby">
         <img src="images/gem-regular.svg" alt="An icon representing a diamond shape" width="100">
         <div class="tech-details">
           <h3>Ruby & Ruby on rails</h3>
@@ -130,7 +132,7 @@
           <p>Ruby is used for web-scraping, data processing, automation and more and Ruby on rails is a web development framework that works with any programming language</p>
         </div>
       </div>
-      <div class="tech-cards">
+      <div class="tech-cards git">
         <img src="images/github-square-brands.svg" alt="An icon of octocat representing Github" width="100">
         <div class="tech-details">
           <h3>Git & Github</h3>
@@ -139,6 +141,7 @@
           <p>Learn about git the Version control system and github which provides internet hosting and many other features by using git.</p>
         </div>
       </div>
+      <button class="more">MORE<span><i class="fa-solid fa-angle-down"></i></span></button>
     </section>
     <section class="feedback">
       <h1>Success Stories <hr></h1>
