Add links to about page

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
     <header>
-      <a href="#"> <img src="images/logodevHome.jpg" alt="text devHome with an arc upward representing logo"> </a>
+      <a href="index.html"> <img src="images/logodevHome.jpg" alt="text devHome with an arc upward representing logo"> </a>
       <nav>
         <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about-page/index.html">About</a></li>
           <li><a href="#">Program</a></li>
           <li><a href="#">Join</a></li>
           <li><a href="#">Sponsor</a></li>
@@ -156,7 +156,6 @@
         </div>
       </div>
     </section>
-
     <footer>
       <h1>&#169; creative commons</h1>
       <p>2022 Creative Commons. Some Rights Reserved.<br>
