Add mobile menu and dynamic html section

--- a/about-page/index.html
+++ b/about-page/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="style.css" rel="stylesheet">
+  <script src="../script.js" defer></script>
   <script src="https://kit.fontawesome.com/5ff773556d.js" crossorigin="anonymous" defer></script>
   <title>devHome- About</title>
 </head>
@@ -14,7 +15,20 @@
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="index.html">About</a></li>
+        <li><a href="#">Program</a></li>
+        <li><a href="#">Join</a></li>
+        <li><a href="#">Sponsor</a></li>
+        <li><a href="#">News</a></li> 
+      </ul>
+    </nav>
+  </header>
+  <header class="mobile">
+    <button class="close-menu"><i class="fa-solid fa-xmark"></i></button>
+    <nav class="mobile-menu">
+      <ul class="mobile-menu links">
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="index.html">About</a></li>
         <li><a href="#">Program</a></li>
         <li><a href="#">Join</a></li>
         <li><a href="#">Sponsor</a></li>
