--- a/index.html
+++ b/index.html
@@ -24,11 +24,27 @@
         </ul>
       </nav>
     </header>
+    <header class="mobile">
+      <button class="close-menu"><i class="fa-solid fa-xmark"></i></button>
+      <nav class="mobile-menu">
+        <ul class="mobile-menu links">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="about-page/index.html">About</a></li>
+          <li><a href="#">Program</a></li>
+          <li><a href="#">Join</a></li>
+          <li><a href="#">Sponsor</a></li>
+          <li><a href="#">News</a></li> 
+        </ul>
+      </nav>
+    </header>
     <section class="introduction">
       <button class="hamburger"><i class="fa-solid fa-bars"></i></button>
       <h1>"Welcome to devHome!"<br><span class="intro-header">A place to Learn <br>Web Development <br>at home</span></h1>
       <p class="intro-description">Thousands of curated content from various resources to provide <br>
         you with structure and project based-learning, anytime, anywhere. <br>All it's gonna take is your time.
+      </p>
+      <p class="intro-description mobile">Thousands of curated content from various resources to provide
+        you with structure and project based-learning, anytime, anywhere.All it's gonna take is your time.
       </p>
       <details>
         <summary>Content</summary>
@@ -87,62 +103,9 @@
 
     <section class="technologies">
       <h1>Featured Technologies <hr></h1>
-      <div class="tech-cards html">
-        <img src="images/html5-brands.svg" alt="html5 language icon" width="100">
-        <div class="tech-details">
-          <h3>HTML 5</h3>
-          <span>Hyper Text Markup language</span>
-          <hr>
-          <p>From Intermediate to Advance, Learn about the foundation of web and the language used to build structure of a webpage</p>
-        </div>
-      </div>
-      <div class="tech-cards css">
-        <img src="images/css3-alt-brands.svg" alt="css3 language icon" width="100">
-        <div class="tech-details">
-          <h3>Css 3</h3>
-          <span>Cascading StyleSheet</span>
-          <hr>
-          <p>From Intermediate to Advance, Learn about the language used for the layout and style of a webpage</p>
-        </div>
-      </div>
-      <div class="tech-cards js">
-        <img src="images/js-square-brands.svg" alt="javascript language icon" width="100">
-        <div class="tech-details">
-          <h3>Javascript</h3>
-          <span>Most widely used language on web</span>
-          <hr>
-          <p>Get familiar with the most widely used langauge in web, build projects and add functionality and UI to your webpage.</p>
-        </div>
-      </div>
-      <div class="tech-cards dbms">
-        <img src="images/database-solid.svg" alt="An icon representing database" width="100">
-        <div class="tech-details">
-          <h3>DBMS</h3>
-          <span>Database management system</span>
-          <hr>
-          <p>Learn about storing, organising and accessing data in an efficient manner.</p>
-        </div>
-      </div>
-      <div class="tech-cards ruby">
-        <img src="images/gem-regular.svg" alt="An icon representing a diamond shape" width="100">
-        <div class="tech-details">
-          <h3>Ruby & Ruby on rails</h3>
-          <span>Ruby is a general purpose programming language.</span>
-          <hr>
-          <p>Ruby is used for web-scraping, data processing, automation and more and Ruby on rails is a web development framework that works with any programming language</p>
-        </div>
-      </div>
-      <div class="tech-cards git">
-        <img src="images/github-square-brands.svg" alt="An icon of octocat representing Github" width="100">
-        <div class="tech-details">
-          <h3>Git & Github</h3>
-          <span>Version control system</i></span>
-          <hr>
-          <p>Learn about git the Version control system and github which provides internet hosting and many other features by using git.</p>
-        </div>
-      </div>
       <button class="more">MORE<span><i class="fa-solid fa-angle-down"></i></span></button>
     </section>
+    
     <section class="feedback">
       <h1>Success Stories <hr></h1>
       <div class="slider">
