--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
     <section class="technologies">
       <h1>Featured Technologies <hr></h1>
-      <button class="more">MORE<span><i class="fa-solid fa-angle-down"></i></span></button>
+      <button class="more">See More<span><i class="fa-solid fa-angle-down"></i></span></button>
     </section>
     
     <section class="feedback">
